--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy to GitHub Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -14,7 +14,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -23,12 +23,9 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-env:
-  BUILD_PATH: "." # default value when not using subfolders
-
 jobs:
-  build:
-    name: Build
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -59,28 +56,16 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-        working-directory: ${{ env.BUILD_PATH }}
 
       - name: Build with Astro
         run: pnpm run build
-        working-directory: ${{ env.BUILD_PATH }}
         env:
           PUBLIC_CREEBLE_API_KEY: ${{ secrets.PUBLIC_CREEBLE_API_KEY }}
           PROJECT_ENDPOINT: ${{ secrets.PROJECT_ENDPOINT }}
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ${{ env.BUILD_PATH }}/dist
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
-    runs-on: ubuntu-latest
-    name: Deploy
-    steps:
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: gh-pages
