--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.12.7",
     "creeble-js": "^0.3.1",
     "gsap": "^3.13.0",
+    "prismjs": "^1.30.0",
     "sass": "^1.89.2"
   }
 }
